@@ -8,11 +8,12 @@ CREATE TABLE actions_tmp (
 	repeatdelay		integer		DEFAULT '600'	NOT NULL,
 	source		integer		DEFAULT '0'	NOT NULL,
 	actiontype		integer		DEFAULT '0'	NOT NULL,
+	evaltype		integer		DEFAULT '0'	NOT NULL,
 	status		integer		DEFAULT '0'	NOT NULL,
 	scripts		blob		DEFAULT ''	NOT NULL,
 	PRIMARY KEY (actionid)
 ) ENGINE=InnoDB ;
 
-insert into actions_tmp select * from actions;
+insert into actions_tmp select actionid,userid,subject,message,recipient,maxrepeats,repeatdelay,source,actiontype,0,status,scripts from actions;
 drop table actions;
 alter table actions_tmp rename actions;
