@@ -1,5 +1,7 @@
 Changes for 1.3.4:
 
+ - added actions.evaltype (Alexei)
+ - added support of all AND, all OR and AND/OR action conditions (Alexei)
  - fixed processing of Text items (Alexei)
  - NetBSD compilation fixes (Alexei)
 
